# hayai

./: .clang-format  .gitignore  CMakeLists.txt  Coroutines vs Callbacks.md  README.md
examples/: coro_basic_demo.cc  coro_echo_server.cc  echo_server.cc
include/hayai/coro/: AsyncConnection.h  AsyncServer.h  Awaiter.h  Task.h  spawn.h
include/hayai/net/: Acceptor.h  Channel.h  EventLoop.h  EventLoopThread.h  EventLoopThreadPool.h  InetAddress.h  Poller.h  Socket.h  TcpConnection.h  TcpServer.h
include/hayai/utils/: Buffer.h  NonCopyable.h
src/coro/: AsyncConnection.cc  AsyncServer.cc
src/net/: Accpetor.cc  Channel.cc  EventLoop.cc  EventLoopThread.cc  EventLoopThreadPool.cc  InetAddress.cc  Poller.cc  Socket.cc  TcpConnection.cc  TcpServer.cc
src/utils/: Buffer.cc
tests/: AcceptorTest.cc  BufferTest.cc  CoroConnectionTest.cc  CoroServerTest.cc  CoroSpawnTest.cc  CoroTaskTest.cc  EchoServerIntegrationTest.cc  EventLoopTest.cc  EventLoopThreadPoolTest.cc  InetAddressTest.cc  SocketTest.cc  TcpConnectionTest.cc  TcpServerTest.cc  coro_echo_smoke_test.py
